--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -35,7 +35,7 @@ Välkommen till kursen Webbapplikationer för mobila enheter.
 />
 
 <LinkCard
-  title="⚠️ kmom04 - Mobila enheters styrkor"
+  title="kmom04 - Mobila enheters styrkor"
   href="/kmom/kmom04"
   description="Vi bygger ut webbshoppen med orderhantering."
 />
