--- a/src/content/docs/kmom/kmom04.mdx
+++ b/src/content/docs/kmom/kmom04.mdx
@@ -17,19 +17,11 @@ import { Aside } from '@astrojs/starlight/components';
 
 <Aside type="caution">Kursmaterial är under utveckling. Påbörja inte kursmomentet så länge denna gula rutan finns.</Aside>
 
-Vi fortsätter med Lager appen och lägger till en funktion för att skapa fakturor utifrån en order. Alla ska inte kunna skapa fakturor så innan vi skapar faktura funktionen skapar vi inloggning och tittar på JSON Web Tokens för autentisering.
-
-När man skapar en faktura är det bra att ha snygga och responsiva tabeller. Så kursmomentets GUI-komponent är just tabeller och hur vi optimerar dessa för mobila enheter.
-
-
-
-
-
-
+I detta kursmoment börjar vi till fullo att utnyttja styrkorna i våra mobila enheter. Vi kopplar in GPS och enhetens kamera för att skapa en fulländad applikation, som utnyttjar flera av de möjligheter vi har på en mobil plattform.
 
 Så här kan det se ut när vi är klara.
 
-<YouTube posterQuality="max" id="BPigfJ58JPI" />
+
 
 
 
@@ -54,8 +46,6 @@ Veckans genomgång
 
 Emil har genomgånger tisdagar kl 13:15, efter genomgången uppdateras denna delen av sidan med veckans genomgång.
 
-<YouTube posterQuality="max" id="UALaFaipAi4" />
-
 
 
 Veckans föreläsning 
@@ -63,14 +53,12 @@ Veckans föreläsning
 
 Emil har föreläsningar onsdagar kl 13:15, efter föreläsningen uppdateras denna delen av sidan med veckans föreläsning.
 
-<YouTube posterQuality="max" id="sZDvUQbFnTk" />
-
 
 
 Läsanvisningar 
 ---------------------------------
 
-*(ca: 6-10 studietimmar)*
+*(ca: 1 studietimme)*
 
 
 
@@ -78,22 +66,14 @@ Läsanvisningar
 
 Läs följande artiklar för att få bakgrunden till övningarna.
 
-1. Bekanta dig med [JSON Web Tokens](https://jwt.io).
-
-
-
-### Video 
-
-Se följande videor.
-
-1. Det finns en [videoserie](https://www.youtube.com/playlist?list=PLKtP9l5q3ce_CbhJOudHjxkjYofM98kvh) kopplat till kursen, titta på videos som börjar på 4.
+1. Skumma över [Getting Started](https://vite.dev/guide/) från Vite.
 
 
 
 Övningar & Uppgifter
 -------------------------------------------
 
-*(ca: 6-10 studietimmar)*
+*(ca: 10-12 studietimmar)*
 
 
 
@@ -101,11 +81,13 @@ Se följande videor.
 
 Gör följande övningar för att träna inför uppgifterna.
 
-1. Gör övningen [Tabeller i mobila enheter](/kunskap/tabeller-i-mobila-enheter). Spara eventuella filer i ditt webapp-lager repo.
+1. Jobba igenom övningen "[Byggverktyget Vite](/kunskap/vite)". Installera modulerna och skriv koden i `webapp-lager`.
 
-1. Gör övningen [Login med JWT](/kunskap/login-med-jwt). Spara eventuella filer i ditt webapp-lager repo.
+1. Jobba igenom övningen "[Animationer och övergångar](/kunskap/animationer-och-overgangar)". Utöka din app i `webapp-lager` med utgångspunkt i exempelkoden.
 
-1. Gör övningen [Content Security Policy](/kunskap/content-security-policy). Spara eventuella filer i ditt webapp-lager repo.
+1. Jobba igenom övningen "[GPS och karta](/kunskap/gps-och-karta)". Utöka din app i `webapp-lager` med utgångspunkt i exempelkoden.
+
+1. Jobba igenom övningen "[Kamera i mobilen](/kunskap/kamera-i-mobilen)". Utöka din app i `webapp-lager` med utgångspunkt i exempelkoden.
 
 
 
@@ -124,7 +106,8 @@ Resultat & Redovisning
 
 Se till att följande frågor besvaras i redovisningstexten i din inlämning.
 
-* Vilka utmaningar finns med tabeller i mobila enheter?
-* Vilka fördelar finns med JWT?
-* Hur använde du din kunskap från tidigare kursmoment för att göra inloggningsformuläret?
+* Vilka fördelar upplever du att en mobil enhet ger jämfört med en vanlig dator?
+* Fick du till ett bra gränssnitt med kartan?
+* Vilka effekter gav animationer och övergångar?
+* Hur kändes det att jobba mot ett bild-API förutom Lager-API:t?
 * Vilken är din TIL för detta kmom?
