--- a/src/content/docs/kmom/kmom04.mdx
+++ b/src/content/docs/kmom/kmom04.mdx
@@ -13,16 +13,12 @@ revision:
 ---
 
 import { YouTube } from 'astro-embed';
-import { Aside } from '@astrojs/starlight/components';
-
-<Aside type="caution">Kursmaterial är under utveckling. Påbörja inte kursmomentet så länge denna gula rutan finns.</Aside>
 
 I detta kursmoment börjar vi till fullo att utnyttja styrkorna i våra mobila enheter. Vi kopplar in GPS och enhetens kamera för att skapa en fulländad applikation, som utnyttjar flera av de möjligheter vi har på en mobil plattform.
 
 Så här kan det se ut när vi är klara.
 
-
-
+<YouTube posterQuality="max" id="9sR8gn4HGfc" />
 
 
 <small><i>(Detta är instruktionen för kursmomentet och omfattar det som skall göras inom ramen för kursmomentet. Momentet omfattar cirka **20 studietimmar** inklusive läsning, arbete med övningar och uppgifter, felsökning, problemlösning, redovisning och eftertanke. Läs igenom hela kursmomentet innan du börjar jobba. Om möjligt -- planera och prioritera var du vill lägga tiden.)</i></small>
