--- a/src/content/docs/kunskap/kamera-i-mobilen.mdx
+++ b/src/content/docs/kunskap/kamera-i-mobilen.mdx
@@ -22,9 +22,9 @@ Vi börjar med att skapa en komponent `CameraComponent` i filen `src/components/
 ```javascript
 export default class CameraComponent extends HTMLElement {
     constructor() {
-        super();
+        super()
 
-        this.photoData = "";
+        this.photoData = ""
     }
 
     connectedCallback() {
@@ -35,9 +35,9 @@ export default class CameraComponent extends HTMLElement {
             <button id="sendbutton">Send photo</button>
         </div>
         <canvas id="canvas"></canvas>
-        `;
+        `
 
-        this.startup();
+        this.startup()
     }
 }
 ```
@@ -48,67 +48,67 @@ När sidan är laddat anropar vi sedan funktionen `startup` för att sätta upp 
 
 ```javascript
 startup() {
-    let streaming = false;
-    const width = 320; // We will scale the photo width to this
-    let height = 0; // This will be computed based on the input stream
+    let streaming = false
+    const width = 320 // We will scale the photo width to this
+    let height = 0 // This will be computed based on the input stream
 
-    let video = document.getElementById("video");
-    let canvas = document.getElementById("canvas");
-    let startbutton = document.getElementById("startbutton");
-    let sendbutton = document.getElementById("sendbutton");
+    let video = document.getElementById("video")
+    let canvas = document.getElementById("canvas")
+    let startbutton = document.getElementById("startbutton")
+    let sendbutton = document.getElementById("sendbutton")
 
     navigator.mediaDevices
         .getUserMedia({ video: true, audio: false })
         .then((stream) => {
-            video.srcObject = stream;
-            video.play();
+            video.srcObject = stream
+            video.play()
         })
         .catch((err) => {
-            console.error(`An error occurred: ${err}`);
-        });
+            console.error(`An error occurred: ${err}`)
+        })
 
     video.addEventListener(
         "canplay",
         () => {
             if (!streaming) {
-                height = video.videoHeight / (video.videoWidth / width);
+                height = video.videoHeight / (video.videoWidth / width)
 
                 // Firefox currently has a bug where the height can't be read from
                 // the video, so we will make assumptions if this happens.
 
                 if (isNaN(height)) {
-                    height = width / (4 / 3);
+                    height = width / (4 / 3)
                 }
 
-                video.setAttribute("width", width);
-                video.setAttribute("height", height);
-                canvas.setAttribute("width", width);
-                canvas.setAttribute("height", height);
-                streaming = true;
+                video.setAttribute("width", width)
+                video.setAttribute("height", height)
+                canvas.setAttribute("width", width)
+                canvas.setAttribute("height", height)
+                streaming = true
             }
         },
         false
-    );
+    )
 
     startbutton.addEventListener(
         "click",
         (ev) => {
-            ev.preventDefault();
-            this.takepicture(canvas, video, width, height);
+            ev.preventDefault()
+            this.takepicture(canvas, video, width, height)
         },
         false
-    );
+    )
 
     sendbutton.addEventListener(
         "click",
         (ev) => {
-            ev.preventDefault();
-            this.sendpicture();
+            ev.preventDefault()
+            this.sendpicture()
         },
         false
-    );
+    )
 
-    this.clearphoto(canvas);
+    this.clearphoto(canvas)
 }
 ```
 
@@ -116,26 +116,26 @@ De resterande funktionerna i klassen finns nedan. I `takepicture` ritar vi ut en
 
 ```javascript
 takepicture(canvas, video, width, height) {
-    const context = canvas.getContext("2d");
+    const context = canvas.getContext("2d")
 
     if (width && height) {
-        canvas.width = width;
-        canvas.height = height;
-        context.drawImage(video, 0, 0, width, height);
+        canvas.width = width
+        canvas.height = height
+        context.drawImage(video, 0, 0, width, height)
 
-        this.photoData = canvas.toDataURL("image/png");
+        this.photoData = canvas.toDataURL("image/png")
     } else {
-        this.clearphoto(canvas);
+        this.clearphoto(canvas)
     }
 }
 
 clearphoto(canvas) {
-    const context = canvas.getContext("2d");
+    const context = canvas.getContext("2d")
 
-    context.fillStyle = "#AAA";
-    context.fillRect(0, 0, canvas.width, canvas.height);
+    context.fillStyle = "#AAA"
+    context.fillRect(0, 0, canvas.width, canvas.height)
 
-    this.photoData = canvas.toDataURL("image/png");
+    this.photoData = canvas.toDataURL("image/png")
 }
 ```
 
@@ -148,20 +148,26 @@ För att vi ska kunna spara undan bilderna behöver vi en plats att spara undan 
 
 ![Upload care key](https://dbwebb.se/image/webapp/webapp-uploadcare-key.png)
 
-Vi importerar sedan `upload-client` längst upp i filen `components/camera.js` med raden `import { UploadClient } from "https://cdn.jsdelivr.net/npm/@uploadcare/upload-client@6.14.1/dist/esm/index.browser.mjs";`.
+Vi installerar och importerar sedan `upload-client` längst upp i filen `components/camera.js` med först kommandot.
+
+```shell
+npm install @uploadcare/upload-client
+```
+
+Och sedan lägga till `import { UploadClient } from '@uploadcare/upload-client'` längst uppe i CameraComponent.
 
 De med skarpa ögen såg att vi hade lagt till en `eventListener` på `sendbutton` i `startup()`, den anropar funktionen `sendpicture`.
 
 ```javascript
 async sendpicture() {
-    const blob = await (await fetch(this.photoData)).blob();
+    const blob = await (await fetch(this.photoData)).blob()
 
-    const client = new UploadClient({ publicKey: '[INSERT API-KEY]' });
+    const client = new UploadClient({ publicKey: '[INSERT API-KEY]' })
 
-    const fileInfo = await client.uploadFile(blob);
-    const cdnUrl = fileInfo.cdnUrl;
+    const fileInfo = await client.uploadFile(blob)
+    const cdnUrl = fileInfo.cdnUrl
 
-    console.log(cdnUrl);
+    console.log(cdnUrl)
 }
 ```
 
