--- a/src/content/docs/kunskap/vite.mdx
+++ b/src/content/docs/kunskap/vite.mdx
@@ -48,10 +48,6 @@ För att underlätta för start av vite webbservern lägger vi till två stycken
 },
 ```
 
-import { Aside } from '@astrojs/starlight/components';
-
-<Aside type="caution">Kursmaterialet under denna rutan är under utveckling. Fortsätt inte under detta. Alla andra övningar bör gå att göra.</Aside>
-
 
 
 ## Bygga koden med vite
@@ -72,5 +68,70 @@ dist/
 
 ## Driftsättning via GitHub Pages
 
-Tidigare har vi bara laddat upp vår koden till GitHub och sedan har det bara automagiskt driftsatts med hjälp av filen `.github/workflows/static-deploy.yml`. För att det ska fungera även efter ett vite bygge behöver vi ändra lite i denna filen.
+Tidigare har vi bara laddat upp vår koden till GitHub och sedan har det bara automagiskt driftsatts med hjälp av filen `.github/workflows/static-deploy.yml`. För att det ska fungera även efter ett vite bygge behöver vi fixa lite, vi tar utgångspunkt i Vite's egna beskrivning. Först skapar vi filen `vite.config.js` och lägger in följande. Om ditt repo av någon anledning heter något annat än webapp-lager lägg in det.
 
+```javascript
+// vite.config.js
+export default {
+  base: '/webapp-lager/',
+}
+```
+
+Sedan går vi till filen `.github/workflows/static-deploy.yml`, där kan du klistra in följande. Den stora skillnaden mot tidigare är att nu installerar vi först alla npm-moduler och sedan kör vi `npm run build` steget. Sedan tar vi dist-katalogen och driftsätter utifrån den.
+
+```yaml
+# Simple workflow for deploying static content to GitHub Pages
+name: Deploy static content to Pages
+
+on:
+  # Runs on pushes targeting the default branch
+  push:
+    branches:
+      - main
+      - 'kmom*'
+
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+# Sets the GITHUB_TOKEN permissions to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow one concurrent deployment
+concurrency:
+  group: 'pages'
+  cancel-in-progress: true
+
+jobs:
+  # Single deploy job since we're just deploying
+  deploy:
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v5
+      - name: Set up Node
+        uses: actions/setup-node@v6
+        with:
+          node-version: lts/*
+          cache: 'npm'
+      - name: Install dependencies
+        run: npm ci
+      - name: Build
+        run: npm run build
+      - name: Setup Pages
+        uses: actions/configure-pages@v5
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v4
+        with:
+          # Upload dist folder
+          path: './dist'
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
+```
