Done with and released kmomo5

--- a/src/content/docs/index.mdx
+++ b/src/content/docs/index.mdx
@@ -31,25 +31,25 @@ Välkommen till kursen Webbapplikationer för mobila enheter.
 <LinkCard
   title="kmom03 - Autentisering med JWT"
   href="/kmom/kmom03"
-  description="Vi använder JavaScript för att skapa en varukorg och piffa till lite."
+  description="Vi använder JWT tokens för att säkra upp vår applikation."
 />
 
 <LinkCard
   title="kmom04 - Mobila enheters styrkor"
   href="/kmom/kmom04"
-  description="Vi bygger ut webbshoppen med orderhantering."
+  description="Vi använder GeoLocation och MediaCapture Web API:erna för att nyttja våra mobila enheters styrkor."
 />
 
 <LinkCard
-  title="⚠️ kmom05 - Real-tids kommunikation"
+  title="kmom05 - Real-tids kommunikation"
   href="/kmom/kmom05"
-  description="Vi tittar på sätt att strukturera upp vår JavaScript för återvinning."
+  description="Vi använder sockets för att chatta i real-tid."
 />
 
 <LinkCard
   title="⚠️ kmom06 - Progressive Web Applications"
   href="/kmom/kmom06"
-  description="Hur kan vi använda AI för att förbättra användarupplevelsen?"
+  description="Vi tittar på hur vi kan göra om vår applikation till en Progressive Web Application."
 />
 </CardGrid>
 
