--- a/src/content/docs/kunskap/real-tids-chatt.mdx
+++ b/src/content/docs/kunskap/real-tids-chatt.mdx
@@ -2,24 +2,22 @@
 author: efo
 title: Real-tids chatt
 revision:
-    "2024-02-16": "(A, efo) Första utgåvan för webapp-v5 VT24."
+  "2024-02-16": "(A, efo) Första utgåvan för webapp-v5 VT24."
 ---
-Real-tids chatt
-==================================
+
+# Real-tids chatt
 
 I denna övningen tittar vi på hur vi kan använda websockets för att kommunicera i realtid mellan flera klienter.
 
 
 
-Förkunskaper
---------------------------------------
+## Förkunskaper
 
 Du har gjort uppgiften "[Lager appen del 5](../uppgift/lager-appen-del-5-v5)" och kan med fördel bygga vidare på den koden.
 
 
 
-Exempelkod
---------------------------------------
+## Exempelkod
 
 Exempelkod för denna övningen finns i kursrepot under [webapp-example/chat](https://github.com/dbwebb-webapp/webapp-example/tree/main/chat).
 
@@ -27,55 +25,51 @@ Om du skriver nedanstående kod i ditt webapp-lager repo kan du återanvända ko
 
 
 
-Förutsättningar för chatten
---------------------------------------
+## Förutsättningar för chatten
 
 Vi kommer i denna övningen använda oss av socket.io som är en modul för att underlätta websocket kommunikation. Vi kommer allihopa koppla oss mot chatt-servern [https://lager-chat.emilfolino.se](https://lager-chat.emilfolino.se) för att det ska bli lite meddelanden i allas chattar.
 
 
 
-En start
---------------------------------------
+## En start
 
 Först definierar vi ett `customElement` i `main.js` med följande kod:
 
 ```javascript
-import ChatForm from "./components/chat-form.js";
+import ChatForm from "./components/chat-form.js"
 
-customElements.define("chat-form", ChatForm);
+customElements.define("chat-form", ChatForm)
 ```
 
 Vilket gör det möjligt att använda oss av `<chat-form></chat-form>` i vår kod. Så låt oss ta en titt på den komponenten.
 
 
 
-Vår chatt-komponent
---------------------------------------
+## Vår chatt-komponent
 
 I komponenten börjar vi med att importera socket.io-klienten direkt från socket.io's CDN. Sedan skapar ett fält för att skriva i, en knapp för att skicka meddelanden och en `div` för att kunna visa upp alla meddelanden, som kommer skickas båda från din klient och alla andras klienter.
 
 ```javascript
-import { io } from "https://cdn.socket.io/4.8.1/socket.io.esm.min.js";
+import { io } from "https://cdn.socket.io/4.8.1/socket.io.esm.min.js"
 
 export default class ChatForm extends HTMLElement {
-    constructor() {
-        super();
-    }
+  constructor() {
+    super()
+  }
 
-    connectedCallback() {
-        this.innerHTML = `<textarea class="message-textarea" id="message-textarea"></textarea>
-
+  connectedCallback() {
+    this.innerHTML = `<textarea class="message-textarea" id="message-textarea"></textarea>
         <button class="message-button" id="message-button">Send</button>
 
         <h2>Sent messages</h2>
-        <div id="messages"></div>`;
+        <div id="messages"></div>`
 
-        this.init();
-    }
+    this.init()
+  }
 
-    init() {
+  init() {
 
-    }
+  }
 }
 ```
 
@@ -85,28 +79,28 @@ Varje gång knappen för att skicka meddelanden trycks vill vi skicka iväg ett 
 
 ```javascript
 init() {
-    const socket = io("https://lager-chat.emilfolino.se");
+  const socket = io("https://lager-chat.emilfolino.se")
 
-    const textarea = document.getElementById("message-textarea");
-    const button = document.getElementById("message-button");
-    const messages = document.getElementById("messages");
+  const textarea = document.getElementById("message-textarea")
+  const button = document.getElementById("message-button")
+  const messages = document.getElementById("messages")
 
-    button.addEventListener("click", function(event) {
-        event.preventDefault();
+  button.addEventListener("click", function(event) {
+    event.preventDefault()
 
-        if (textarea.value) {
-            socket.emit('chat message', textarea.value);
-            textarea.value = '';
-        }
-    });
+    if (textarea.value) {
+      socket.emit('chat message', textarea.value)
+      textarea.value = ''
+    }
+  })
 
-    socket.on('chat message', (msg) => {
-        const item = document.createElement('p');
+  socket.on('chat message', (msg) => {
+    const item = document.createElement('p')
 
-        item.textContent = msg;
+    item.textContent = msg
 
-        messages.prepend(item);
-    });
+    messages.prepend(item)
+  })
 }
 ```
 
@@ -114,22 +108,19 @@ För att vi även ska kunna ta emot meddelanden från socket-servern vill vi äv
 
 
 
-Skicka objekt
---------------------------------------
+## Skicka objekt
 
 I kodexemplet skickar vi enbart en sträng som värde med hjälp av `emit`, men det går lika bra att skicka mer avancerade datatyper som till exempel objekt.
 
 ```javascript
 const message = {
-    sender: "Emil",
-    test: "Coolt med sockets!",
-};
+  sender: "Emil",
+  test: "Coolt med sockets!",
+}
 
-socket.emit('chat message', message);
+socket.emit("chat message", message)
 ```
 
-
-Avslutningsvis
---------------------------------------
+## Avslutningsvis
 
 Vi har i denna övning tittat på hur vi kan använda `socket.io` för att kommunicera i realtid mellan ett antal olika klienter.
