--- a/src/content/docs/kmom/kmom05.mdx
+++ b/src/content/docs/kmom/kmom05.mdx
@@ -1,24 +1,19 @@
 ---
-title: kmom05 - Real-tids kommunikation
+title: kmom05 - PWA
 description: Kursmoment 5
 ---
 
 import { YouTube } from 'astro-embed';
-import { Aside } from '@astrojs/starlight/components';
 
-<Aside type="caution">Kursmaterial är under utveckling. Påbörja inte kursmomentet så länge denna gula rutan finns.</Aside>
 
-I detta kursmoment börjar vi till fullo att utnyttja styrkorna i våra mobila enheter. Vi kopplar in GPS och enhetens kamera för att skapa en fulländad applikation, som utnyttjar flera av de möjligheter vi har på en mobil plattform.
+I detta kmom tittar vi på hur vi med hjälp av websockets kan kommunicera i real-tid mellan flera olika klienter. Vi gör det genom att bygga en kundtjänst chatt, där alla i kursen kan prata tillsammans.
 
+Så här kan det se ut när vi är klara med kursmoment 05.
+
+Kommer snart!
 
 
 <small><i>(Detta är instruktionen för kursmomentet och omfattar det som skall göras inom ramen för kursmomentet. Momentet omfattar cirka **20 studietimmar** inklusive läsning, arbete med övningar och uppgifter, felsökning, problemlösning, redovisning och eftertanke. Läs igenom hela kursmomentet innan du börjar jobba. Om möjligt -- planera och prioritera var du vill lägga tiden.)</i></small>
-
-
-
-Så här kan det se ut när vi är klara med kursmoment 05. Jag vet att jg säger kmom06 i början, men detta är videon för kmom05.
-
-<YouTube posterQuality="max" id="SDvsHIIIC_k" />
 
 
 
@@ -34,17 +29,36 @@ git checkout -b kmom05
 
 
 
-Veckans genomgång
+Veckans genomgång 
 ---------------------------------
 
 Emil har genomgånger tisdagar kl 13:15, efter genomgången uppdateras denna delen av sidan med veckans genomgång.
 
 
 
-Veckans föreläsning
+Veckans föreläsning 
 ---------------------------------
 
 Emil har föreläsningar onsdagar kl 13:15, efter föreläsningen uppdateras denna delen av sidan med veckans föreläsning.
+
+
+
+Läsanvisningar 
+---------------------------------
+
+*(ca: 6-10 studietimmar)*
+
+### Artiklar
+
+Läs följande artiklar för att få bakgrunden till övningar och uppgifter.
+
+1. Bekanta dig översiktligt med [WebSocket API](https://developer.mozilla.org/en-US/docs/Web/API/WebSockets_API).
+
+1. Bekanta dig med [socket.io](https://socket.io/).
+
+Du kan även med fördel titta på denna video:
+
+<YouTube posterQuality="max" id="1BfCnjr_Vjg" />
 
 
 
@@ -57,13 +71,7 @@ Emil har föreläsningar onsdagar kl 13:15, efter föreläsningen uppdateras den
 
 ### Övningar
 
-Använd nedanstående övningar som inspiration för att klara av uppgiften här i kmom05.
-
-1. Jobba igenom övningen "[Animationer och övergångar](/kunskap/animationer-och-overgangar)". Utöka din app i `webapp-lager` med utgångspunkt i exempelkoden.
-
-1. Jobba igenom övningen "[GPS och karta](/kunskap/gps-och-karta)". Utöka din app i `webapp-lager` med utgångspunkt i exempelkoden.
-
-1. Jobba igenom övningen "[Kamera i mobilen](/kunskap/kamera-i-mobilen)". Utöka din app i `webapp-lager` med utgångspunkt i exempelkoden.
+1. Jobba igenom övningen "[Real-tids chatt](/kunskap/real-tids-chatt)". Utöka din app i webbapp-lager repot.
 
 
 
@@ -71,7 +79,7 @@ Använd nedanstående övningar som inspiration för att klara av uppgiften här
 
 Dessa uppgifter skall utföras och redovisas.
 
-1. Gör uppgiften "[Lager appen del 5](/uppgift/lager-appen-del-5)". Spara dina filer i `src`.
+1. Gör uppgiften "[Lager appen del 5](/uppgift/lager-appen-del-5)". Spara dina filer i webapp-lager repot.
 
 
 
@@ -82,8 +90,7 @@ Resultat & Redovisning
 
 Se till att följande frågor besvaras i redovisningstexten.
 
-* Vilka fördelar upplever du att en mobil enhet ger jämfört med en vanlig dator?
-* Fick du till ett bra gränssnitt med kartan?
-* Vilka effekter gav animationer och övergångar?
-* Hur kändes det att jobba mot ett bild-API förutom Lager-API:t?
+* Hur kändes det att jobba med WebSockets?
+* Fick du till ett bra gränssnitt för att chatta med kundtjänsten?
 * Vilken är din TIL för detta kmom?
+* Vilken är din "In This Course I Learned" (ITCIL) för kursen, välj ut den ena sak du anser mest viktig?
