--- a/src/content/docs/kmom/kmom06.mdx
+++ b/src/content/docs/kmom/kmom06.mdx
@@ -1,5 +1,5 @@
 ---
-title: kmom06 - PWA
+title: kmom06 - Progressive Web Applications
 description: Kursmoment 6
 ---
 
@@ -8,11 +8,10 @@ import { Aside } from '@astrojs/starlight/components';
 
 <Aside type="caution">Kursmaterial är under utveckling. Påbörja inte kursmomentet så länge denna gula rutan finns.</Aside>
 
-I detta kmom tittar vi på hur vi med hjälp av websockets kan kommunicera i real-tid mellan flera olika klienter. Vi gör det genom att bygga en kundtjänst chatt, där alla i kursen kan prata tillsammans.
+I detta kmom tittar vi på hur vi med hjälp av Progressive Web Applications (PWA) workflowet kan skapa applikationer vi kan installera på våra mobila enheter och som fungerar offline.
 
 Så här kan det se ut när vi är klara med kursmoment 06.
 
-<YouTube posterQuality="max" id="5i44jkizxgU" />
 
 
 
@@ -55,13 +54,7 @@ Läsanvisningar
 
 Läs följande artiklar för att få bakgrunden till övningar och uppgifter.
 
-1. Bekanta dig översiktligt med [WebSocket API](https://developer.mozilla.org/en-US/docs/Web/API/WebSockets_API).
-
-1. Bekanta dig med [socket.io](https://socket.io/).
-
-Du kan även med fördel titta på denna video:
-
-<YouTube posterQuality="max" id="1BfCnjr_Vjg" />
+1. Bekanta dig med [Progressive Web Apps ](https://web.dev/explore/progressive-web-apps). Ett förslag är att läsa igenom [What are PWAS](https://web.dev/articles/what-are-pwas) och [Make your PWA feel more like an app](https://web.dev/articles/app-like-pwas) till att börja med, sedan kommer vi dyka in i artiklarna i övningarna nedan.
 
 
 
@@ -74,7 +67,7 @@ Du kan även med fördel titta på denna video:
 
 ### Övningar
 
-1. Jobba igenom övningen "[Real-tids chatt](/kunskap/real-tids-chatt)". Utöka din app i webbapp-lager repot.
+1. Jobba igenom övningen "[Progressive Web Applications](/kunskap/pwa)". Utöka din app i webbapp-lager repot.
 
 
 
