--- a/src/content/docs/kmom/kmom05.mdx
+++ b/src/content/docs/kmom/kmom05.mdx
@@ -10,7 +10,8 @@ I detta kmom tittar vi på hur vi med hjälp av websockets kan kommunicera i rea
 
 Så här kan det se ut när vi är klara med kursmoment 05.
 
-Kommer snart!
+<YouTube posterQuality="max" id="_4Xm_HVslDI" /> 
+
 
 
 <small><i>(Detta är instruktionen för kursmomentet och omfattar det som skall göras inom ramen för kursmomentet. Momentet omfattar cirka **20 studietimmar** inklusive läsning, arbete med övningar och uppgifter, felsökning, problemlösning, redovisning och eftertanke. Läs igenom hela kursmomentet innan du börjar jobba. Om möjligt -- planera och prioritera var du vill lägga tiden.)</i></small>
