--- a/src/content/docs/kmom/kmom03.mdx
+++ b/src/content/docs/kmom/kmom03.mdx
@@ -43,14 +43,17 @@ Veckans genomgång
 
 Emil har genomgånger tisdagar kl 13:15, efter genomgången uppdateras denna delen av sidan med veckans genomgång.
 
+<YouTube posterQuality="max" id="LukzCxsasm8" />
 
+ 
 
 Veckans föreläsning 
 ---------------------------------
 
 Emil har föreläsningar onsdagar kl 13:15, efter föreläsningen uppdateras denna delen av sidan med veckans föreläsning.
+<YouTube posterQuality="max" id="8PCSEF6iKks" />
 
-
+ 
 
 Läsanvisningar 
 ---------------------------------
