--- a/src/content/docs/kmom/kmom04.mdx
+++ b/src/content/docs/kmom/kmom04.mdx
@@ -42,6 +42,8 @@ Veckans genomgång
 
 Emil har genomgånger tisdagar kl 13:15, efter genomgången uppdateras denna delen av sidan med veckans genomgång.
 
+<YouTube posterQuality="max" id="jDjHmuyVZ8k" />
+
 
 
 Veckans föreläsning 
