--- a/src/content/docs/kunskap/pwa.mdx
+++ b/src/content/docs/kunskap/pwa.mdx
@@ -15,6 +15,54 @@ Du har gjort kmom05 och har en trevlig webb app så här långt i kursen.
 
 ## En installerbar app
 
+En stor del av PWAs är att de går att installera på våra mobila enheter och för de behöver vi tre filer. Först och främst två loggor. En som är 512x512 pixlar stor och en som är 192x192 pixlar stor. Dessa får ni gärna göra själva, men om ni inte känner att det finns tid eller kunskap om hur man gör en sån logga finns det två stycken att ladda ner från kurswebbplatsen: [Logga 192x192](https://dbwebb-webapp.github.io/infinity_192.webp) och [Logga 512x512](https://dbwebb-webapp.github.io/infinity_512.webp). Lägg dessa i din public katalog i ditt repo.
+
+Sedan behöver vi en manifest-fil. Denna filen döper vi till `manifest.json` och lägger i roten av vårt repo. I den fyller vi i följande:
+
+```json
+// manifest.json
+{
+  "short_name": "Infinity Warehouses",
+  "name": "Infinity Warehouses",
+  "icons": [
+    {
+      "src": "/webapp-lager/infinity_192.webp",
+      "type": "image/webp",
+      "sizes": "192x192"
+    },
+    {
+      "src": "/webapp-lager/infinity_512.webp",
+      "type": "image/webp",
+      "sizes": "512x512"
+    }
+  ],
+  "id": "/webapp-lager",
+  "start_url": "/webapp-lager",
+  "background_color": "#ff69b4",
+  "display": "standalone",
+  "scope": "/webapp-lager",
+  "theme_color": "#ff69b4",
+  "description": "Application for Infinity Warehouses"
+}
+```
+
+Det som måste finnas i detta manifest är `short_name` eller `name` och länk till loggorna. Det andra är mest för att få till finesser.
+
+För att sedan ladda in `manifest.json` till vår applikation lägger vi till raden `<link rel="manifest" href="manifest.json">`. Min head-del ser nu ut på följande sätt:
+
+```html
+<!-- index.html -->
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Lager-Components</title>
+
+  <link rel="manifest" href="manifest.json">
+  <link rel="stylesheet" href="style.css" />
+  <script type="module" src="src/main.js" defer></script>
+</head>
+```
+
 
 
 ## Offline-läge med ServiceWorkers
