--- a/src/content/docs/kmom/kmom05.mdx
+++ b/src/content/docs/kmom/kmom05.mdx
@@ -1,5 +1,5 @@
 ---
-title: kmom05 - PWA
+title: kmom05 - Real-tids kommunikation
 description: Kursmoment 5
 ---
 
@@ -94,4 +94,3 @@ Se till att följande frågor besvaras i redovisningstexten.
 * Hur kändes det att jobba med WebSockets?
 * Fick du till ett bra gränssnitt för att chatta med kundtjänsten?
 * Vilken är din TIL för detta kmom?
-* Vilken är din "In This Course I Learned" (ITCIL) för kursen, välj ut den ena sak du anser mest viktig?
