--- a/src/content/docs/kmom/kmom06.mdx
+++ b/src/content/docs/kmom/kmom06.mdx
@@ -85,8 +85,9 @@ Resultat & Redovisning
 *(ca: 1-2 studietimmar)*
 
 Se till att följande frågor besvaras i redovisningstexten.
+?
 
-* Hur kändes det att jobba med WebSockets?
-* Fick du till ett bra gränssnitt för att chatta med kundtjänsten?
+* Vad ser du för nytta med PWA?
+* Upplevde du det som en bra process att göra om din applikation till en PWA?
 * Vilken är din TIL för detta kmom?
 * Vilken är din "In This Course I Learned" (ITCIL) för kursen, välj ut den ena sak du anser mest viktig?
